--- a/maersk.html
+++ b/maersk.html
@@ -3,22 +3,18 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Page Title</title>
-
     <link rel="stylesheet" href="maersk.css">
-
 </head>
 <body>
 
-    <h2>Suffle and Sort</h2>
-    <button onclick="sortNumber()">
-    Sort
-    </button>
-    <button onclick="shuffleNumber()">
-    Shuffle
-    </button>
-    <div id="container">
-    
+    <h2>Shuffle and Sort</h2>
+    <div class="btn-section">
+        <button onclick="sortNumber()">SORT</button>
+        <button onclick="shuffleNumber()">SHUFFLE</button>
     </div>
+    <div id="container">
+    </div>
+    <div class="note">Shuffle and sort by Punam Kolte</div>
 
     <script src="maersk.js"></script>
 </body>
